@@ -12,6 +12,13 @@ LIST OF CHANGES
      different places in three models. In one of the models the code was never
      called, so was simply deleted.
    - Simplified the logic of retrieving cached lists and counts of runs.
+   - Dropped a custom 'read' method from npg::view::instrument. The code
+     there, which computed lists of runs and runs count is not used in the
+     template that renders an instrument. Listing of runs is implemented as
+     an iframe and therefore rendering is done by the template for listing runs.
+   - Dropped 'runs' and 'count_run' methods from npg::model::instrument, these
+     methods were only called by the deleted 'read' method from
+     npg::view::instrument
 
 release 102.1.0 (2025-01-16)
  - Fixed perlbrew installation by installing libdevel-patchperl-perl in
